--- a/package.json
+++ b/package.json
@@ -21,14 +21,68 @@
   "publisher": "ilyub",
   "main": "src/lodash.js",
   "module": "src/lodash-es.js",
+  "files": [
+    "/src"
+  ],
+  "scripts": {
+    "add-tags": "php node_modules/@skylib/config/src/utils/add-tags.php",
+    "audit": "npm audit",
+    "browserslist": "echo Skip browserslist",
+    "build": "echo Skip build",
+    "build-doc": "echo Skip build-doc",
+    "build-es": "echo Skip build-es",
+    "clean-install": "npm clean-install --no-audit --strict-peer-deps",
+    "clear-cache": "cf cache node_modules/.cache",
+    "commit-msg": "npm run commitlint",
+    "commitlint": "commitlint --edit",
+    "commitlint-all": "commitlint --config commitlint-all.config.js --from=",
+    "compile": "echo Skip compile",
+    "config-lint": "node node_modules/@skylib/config/src/utils/config-lint.js",
+    "delete-tags": "php node_modules/@skylib/config/src/utils/delete-tags.php",
+    "full-check": "php node_modules/@skylib/config/src/utils/full-check.php",
+    "install-deps": "npm install --no-audit --strict-peer-deps",
+    "lint": "eslint --fix --max-warnings 0 --no-error-on-unmatched-pattern *.{js,ts} {__mocks__,configs,fixtures,src,tests}/**/*.{js,ts,vue}",
+    "lint-fast": "npm run lint --config .eslintrc.fast.js",
+    "lint-no-fix": "set TIMING=1 & npm run lint --fix",
+    "package-json-lint": "npmPkgJsonLint .",
+    "php-cs-fixer": "php-cs-fixer fix --verbose",
+    "post-commit": "php node_modules/@skylib/config/src/utils/post-commit.php",
+    "pre-commit": "php node_modules/@skylib/config/src/utils/pre-commit.php",
+    "prepare": "husky install node_modules/@skylib/config/src/git-hooks",
+    "publish": "publish-if-not-exists",
+    "regenerate-lock-file": "npm install --no-audit --package-lock-only --strict-peer-deps",
+    "serve": "echo Skip serve",
+    "sonar": "sonar-scanner",
+    "stylelint": "echo Skip stylelint",
+    "stylelint-html": "echo Skip stylelint-html",
+    "stylelint-html-no-fix": "echo Skip stylelint-html-no-fix",
+    "stylelint-no-fix": "echo Skip stylelint-no-fix",
+    "test": "echo Skip test",
+    "test-fast": "echo Skip test-fast",
+    "tsc": "echo Skip tsc",
+    "update": "npm update --no-audit --strict-peer-deps",
+    "update-package-check": "ncu --dep dev,peer,prod",
+    "update-package-force": "ncu --dep dev,peer,prod --upgrade",
+    "upgrade": "npm run update-package-force & npm run install-deps",
+    "vue-tsc": "echo Skip vue-tsc"
+  },
+  "devDependencies": {
+    "@skylib/config": "^3.0.1"
+  },
   "peerDependencies": {
-    "@types/lodash": ">=4.0.0",
-    "@types/lodash-es": "^4.0.0",
-    "lodash": "^4.0.0",
-    "lodash-es": "^4.0.0"
+    "@types/lodash": ">=4",
+    "@types/lodash-es": ">=4",
+    "lodash": ">=4",
+    "lodash-es": ">=4"
   },
   "engines": {
     "node": ">=14.0.0",
     "npm": ">=7.0.0"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "overrides": {
+    "package-json": "8.1.0"
   }
 }
