--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,8 +15,6 @@
       "node_modules/@types"
     ],
     "types": [
-      "jest",
-      "node",
       "typescript-types"
     ]
   },
@@ -35,6 +33,7 @@
     ".eslintrc.js",
     ".eslintrc.fast.js",
     ".eslintrc.overrides.js",
+    ".eslintrc.rule-overrides.js",
     ".eslintrc.temp.js",
     ".postcssrc.js",
     ".prettierrc.js",
