--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "upgrade": "npm run update-package-force & npm run npm:install"
   },
   "devDependencies": {
-    "@skylib/config": "^3.13.1"
+    "@skylib/config": "^3.20.0",
+    "@skylib/eslint-plugin": "^0.1.40"
   },
   "peerDependencies": {
     "@types/lodash": ">=4",
