--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "lint": "eslint --fix --max-warnings 0 --no-error-on-unmatched-pattern *.{js,ts} {__mocks__,configs,api,bin,fixtures,src,tests}/**/*.{js,ts,vue}",
     "lint-fast": "eslint --config .eslintrc.fast.js --fix --max-warnings 0 --no-error-on-unmatched-pattern *.{js,ts} {__mocks__,configs,api,bin,fixtures,src,tests}/**/*.{js,ts,vue}",
     "lint-no-fix": "eslint --max-warnings 0 --no-error-on-unmatched-pattern *.{js,ts} {__mocks__,configs,api,bin,fixtures,src,tests}/**/*.{js,ts,vue}",
-    "lint-no-fix-profile": "set TIMING=1 & eslint --max-warnings 0 --no-error-on-unmatched-pattern *.{js,ts} {__mocks__,configs,api,bin,fixtures,src,tests}/**/*.{js,ts,vue}",
+    "lint-no-fix-profile": "set TIMING=1 && eslint --max-warnings 0 --no-error-on-unmatched-pattern *.{js,ts} {__mocks__,configs,api,bin,fixtures,src,tests}/**/*.{js,ts,vue}",
     "npm:install": "npm install --no-audit --strict-peer-deps",
     "npm:install-clean": "npm install-clean --no-audit --strict-peer-deps",
     "npm:publish": "publish-if-not-exists",
@@ -54,7 +54,7 @@
     "tsc": "tsc --noEmit",
     "update-package-check": "ncu --dep dev,peer,prod",
     "update-package-force": "ncu --dep dev,peer,prod --upgrade",
-    "upgrade": "npm run update-package-force & npm run npm:install"
+    "upgrade": "npm run update-package-force && npm run npm:install"
   },
   "devDependencies": {
     "@skylib/config": "^3.22.0",
